# VargiBot

./: README.md
docs/: 404.html  CNAME  css  dashboard.html  docs  fonts  img  index.html  js  mkdocs.yml  search  search.html  site  sitemap.xml
docs/api_docs/_build/doctrees/rst/: node_action_server_ros_iot_bridge.doctree
docs/api_docs/_build/html/: py-modindex.html
docs/api_docs/_build/html/rst/: node_action_server_ros_iot_bridge.html
task_0/: README.md  VB_1004.bag  VB_1004.py
task_1/: README.md  t1.bag  t1_output_url.txt
task_1/pkg_ros_iot_bridge/: CMakeLists.txt  package.xml
task_1/pkg_ros_iot_bridge/config/: config_pyiot.yaml
task_1/pkg_ros_iot_bridge/scripts/: node_action_server_ros_iot_bridge.py
task_1/pkg_ros_iot_bridge/scripts/pyiot/: iot.py
task_1/pkg_task1/: CMakeLists.txt  package.xml
task_1/pkg_task1/launch/: shell_webpages_launch.sh  task1.launch
task_1/pkg_task1/scripts/: node_iot_action_client_turtle.py  node_simple_action_server_turtle.py
task_2/: README.md  package.xml
task_2/bag_files/: t2.bag
task_2/launch/: task2.launch  task2.launch~
task_2/scripts/: node_t2_ur5_1_pick_place.py
task_3/: README.md
task_3/catkin_ws/.catkin_tools/profiles/default/: devel_collisions.txt
task_3/catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
task_3/catkin_ws/devel/.private/aws_robomaker_small_warehouse_world/: .catkin  local_setup.sh  setup.sh
task_3/catkin_ws/devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  setup.sh
task_3/catkin_ws/devel/.private/gazebo_conveyor/: .catkin
task_3/catkin_ws/devel/.private/gazebo_dev/: .catkin  local_setup.sh  (+1 more)
task_3/catkin_ws/logs/hrwros_gazebo/: build.symlink.000.log.stderr
task_3/catkin_ws/logs/ur_kinematics/: build.make.000.log.stderr
task_3/catkin_ws/src/pkg_moveit_ur5_1/: .setup_assistant
task_3/pkg_moveit_ur5_1/launch/: moveit.rviz
task_3/pkg_task3/: CMakeLists.txt  package.xml
task_3/pkg_task3/bag_files/: t3.bag
task_3/pkg_task3/launch/: task3_solution.launch
task_3/pkg_task3/scripts/: node_t3_ur5_1_sorting_boxes.py
task_4/: CMakeLists.txt  README.md  package.xml
task_4/bag_files/: t4.bag
task_4/config/ur5_1_saved_trajectories/: drop_to_packagen11.yaml  packagen10_to_drop.yaml  zero_to_packagen02.yaml
task_4/config/ur5_2_saved_trajectories/: drop_to_int.yaml  red_to_drop.yaml  yellow_to_drop.yaml
task_4/launch/: task4_solution.launch
task_4/pkg_task4/: CMakeLists.txt  package.xml
task_4/pkg_task4/bag_files/: t4.bag
task_4/pkg_task4/config/ur5_1_saved_trajectories/: drop_to_packagen22.yaml  x.yaml
task_4/pkg_task4/config/ur5_2_saved_trajectories/: NA_to_drop.yaml  drop_to_green.yaml  drop_to_red.yaml  drop_to_yellow.yaml
task_4/pkg_task4/launch/: task4_solution.launch
task_4/pkg_task4/scripts/: node_ur5_1.py  node_ur5_2.py
task_4/scripts/: node_ur5_1.py  node_ur5_2.py
task_5/: package.xml
task_5/config/rviz/: ur5_1_with_shelf.scene  ur5_1_with_shelf_with_box.scene
task_5/config/ur5_1_saved_trajectories/: drop_to_packagen00.yaml  drop_to_packagen01.yaml  drop_to_packagen02.yaml  drop_to_packagen10.yaml  drop_to_packagen12.yaml  packagen02_to_drop.yaml  packagen20_to_drop.yaml  packagen22_to_drop.yaml
task_5/pkg_ros_iot_bridge/: CMakeLists.txt  package.xml
task_5/pkg_ros_iot_bridge/action/: msgRosIot.action
task_5/pkg_ros_iot_bridge/config/: config_pyiot.yaml
task_5/pkg_ros_iot_bridge/scripts/: node_action_server_ros_iot_bridge.py
task_5/pkg_ros_iot_bridge/scripts/pyiot/: iot.py
task_5/pkg_task5/: CMakeLists.txt  package.xml
task_5/pkg_task5/bag_files/: t5.bag
task_5/pkg_task5/config/rviz/: ur5_1_with_shelf_task4.scene
task_5/pkg_task5/config/ur5_1_saved_trajectories/: drop_to_packagen20.yaml  drop_to_packagen21.yaml  packagen01_to_drop.yaml  packagen11_to_drop.yaml  packagen21_to_drop.yaml  x.yaml  zero_to_packagen00.yaml  zero_to_packagen01.yaml  zero_to_packagen10.yaml  zero_to_packagen11.yaml  zero_to_packagen12.yaml  zero_to_packagen20.yaml  zero_to_packagen21.yaml  zero_to_packagen22.yaml
task_5/pkg_task5/config/ur5_2_saved_trajectories/: green_to_drop.yaml  int_to_red.yaml  int_to_yellow.yaml  zero_to_drop.yaml
task_5/pkg_task5/launch/: task5_solution.launch  task5_solution.launch~
task_5/pkg_task5/msg/: dispatchMsg.msg  incomingMsg.msg  inventoryMsg.msg  packageMsg.msg  shippedMsg.msg
task_5/pkg_task5/scripts/: node_ur5_1.py  node_ur5_2.py
task_5/vb_t5_dd_1004/documentation/: conf.py  index.html  mkdocs.yml
task_5/vb_t5_dd_1004/documentation/api_docs/: index.rst
task_5/vb_t5_dd_1004/documentation/docs/: index.md
task_5/vb_t5_dd_1004/documentation/rst/: node_ur5_1.rst
task_5/vb_t5_dd_1004/documentation/search/: search_index.json
task_5/vb_t5_dd_1004/documentation/site/: 404.html  index.html  search.html
task_5/vb_t5_dd_1004/src_dashboard/: index.html
task_6/vb_t6_bonus_1004/gapps_scripts/: doGet.gs
task_6/vb_t6_bonus_1004/ros_packages/pkg_task5/: package.xml
task_6/vb_t6_bonus_1004/run_files/: t6_i.run  t6_s.run
task_6/vb_t6_original_1004/ros_packages/pkg_ros_iot_bridge/: CMakeLists.txt
task_6/vb_t6_original_1004/run_files/: t6_i.run  t6_s.run
(+847 files in other folders)
